5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1573_1328.log
== TEST (2019-03-29 17:27:48) 
-- CODE:
pedro(35*20)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pedro(35*20)
NameError: name 'pedro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 17:28:01) 
-- CODE:
print(35*20)
-- OUTPUT:
700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 17:28:07) 
-- CODE:
print(35*20)
-- EXECUTION TIME:
0.191504
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
